# Cortex

./: .gitignore  AUTOGRAD_FIXES.md  BACKEND_IMPLEMENTATION.md  GPU_SUPPORT.md  MNIST_example.ipynb  README.md  another_MNIST_example.ipynb  pyproject.toml
Basic/: nn.py  testing.py
examples/: MNIST_example.ipynb  gpu_demo.py  mnist.py
src/cortex/: __init__.py  backend.py  core.py  layers.py  loss.py  tensor.py  utils.py
src/cortex.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/cortex/nn/: loss.py  nn.py  optim.py  train.py
tests/: README.md  test_autograd.py  test_nn.py
