[project]
name = "cortex"
version = "0.1.0"
description = "Machine learning and neural network library built from scratch in Numpy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "notebook>=7.4.7",
    "numpy>=2.3.3",
    "tqdm>=4.67.1",
]
